# FireflyAlgorithm

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  FireflyAlgorithm.py  LICENSE  Problems.md  README.md  README.rst  pyproject.toml  run.py  setup.py
.github/templates/: FEATURE_REQUEST.md  ISSUE_TEMPLATE.md  PULL_REQUEST.md
.github/workflows/: python-app.yml  test.yml
examples/: run.py
fireflyalgorithm/: __init__.py  __main__.py  cli.py  fireflyalgorithm.py  problems.py
fireflyalgorithm/tests/: conftest.py  test_firefly.py
tests/: test_firefly.py  test_fireflyalgorithm.py  test_problems.py
