[tool.poetry]
name = "FireflyAlgorithm"
version = "0.3.1"
description = "Implementation of Firefly Algorithm in Python"
authors = ["firefly-cpp"]
license = "MIT"
readme = "README.md"

include = [
    { path="LICENSE", format="sdist" }
]


[tool.poetry.dependencies]
python = "^3.7"
numpy = [
    { version = "^1.21.5", python = ">=3.7,<3.11" },
    { version = "^1.22.0", python = "^3.11" }
]

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
