[tool.poetry]
name = "fireflyalgorithm"
version = "0.3.3"
description = "Implementation of Firefly Algorithm in Python"
authors = ["Iztok Fister Jr. <iztok@iztok-jr-fister.eu>", "Luka Pečnik <luka.pecnik@student.um.si>", "Žiga Stupan <ziga.stupan1@student.um.si>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/firefly-cpp/FireflyAlgorithm"
repository = "https://github.com/firefly-cpp/FireflyAlgorithm"

include = [
    { path="LICENSE", format="sdist" }
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = [
    { version = "^1.21.5", python = ">=3.7,<3.11" },
    { version = "^1.22.0", python = "^3.11" }
]

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
