[tool.poetry]
name = "fireflyalgorithm"
version = "0.4.1"
description = "Implementation of Firefly Algorithm in Python"
authors = ["Iztok Fister Jr. <iztok@iztok-jr-fister.eu>", "Luka Pečnik <luka.pecnik@student.um.si>", "Žiga Stupan <ziga.stupan1@student.um.si>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/firefly-cpp/FireflyAlgorithm"
repository = "https://github.com/firefly-cpp/FireflyAlgorithm"

include = [
    { path="LICENSE", format="sdist" }
]

[tool.poetry.dependencies]
python = "^3.9,<3.13"
numpy = "^1.26.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[tool.poetry.scripts]
firefly-algorithm = 'fireflyalgorithm.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
